tests/lean/motiveNotTypeCorrect.lean.expected.out
motiveNotTypeCorrect.lean:7:6-7:7: error: Tactic `rewrite` failed: motive is not type correct:
  fun _a => P _a d
Error: Application type mismatch: The argument
  d
has type
  D (f t)
but is expected to have type
  D _a
in the application
  P _a d

Explanation: The rewrite tactic rewrites an expression 'e' using an equality 'a = b' by the following process. First, it looks for all 'a' in 'e'. Second, it tries to abstract these occurrences of 'a' to create a function 'm := fun _a => ...', called the *motive*, with the property that 'm a' is definitionally equal to 'e'. Third, we observe that 'congrArg' implies that 'm a = m b', which can be used with lemmas such as 'Eq.mpr' to change the goal. However, if 'e' depends on specific properties of 'a', then the motive 'm' might not typecheck.

Possible solutions: use rewrite's `occs` configuration option to limit which occurrences are rewritten, or use `simp` or `conv` mode, which have strategies for certain kinds of dependencies (these tactics can handle proofs and `Decidable` instances whose types depend on the rewritten term, and `simp` can apply user-defined `@[congr]` theorems as well).

t : Nat
f : Nat → Nat
h : f t = t
d : D (f t)
P : (t : Nat) → D t → Prop
⊢ P (f t) d
motiveNotTypeCorrect.lean:18:8-18:9: error: Tactic `rewrite` failed: Motive is dependent:
  fun _a => A _a

Note: The rewrite tactic cannot substitute terms on which the type of the target expression depends. The type of the expression
  A true
depends on the value
  true

h : true = false
A : (b : Bool) → if b = true then Prop else Nat
⊢ A true
